--- a/Jenkinsfile.1
+++ b/Jenkinsfile.1
@@ -9,7 +9,7 @@ pipeline {
     		ANSIBLE_PK = credentials('AWS-ProdServer-private-key')
 	}
   	stages {
-		stage('AWS Env Provisioning by Terraform & Ansible') {
+		stage('AWS Env Provisioning by Terraform') {
 			when {
        	    	expression { 
        		 		return params.CHOICE == 'build'
@@ -19,6 +19,27 @@ pipeline {
         		withCredentials([[
          		$class:            'AmazonWebServicesCredentialsBinding', 
 	     		credentialsId:     'AWS_Terraform', 
+    	  		accessKeyVariable: 'AWS_ACCESS_KEY_ID', 
+      			secretKeyVariable: 'AWS_SECRET_ACCESS_KEY']]) {
+	        		sh '''
+            		terraform init
+           			terraform apply --auto-approve
+           			sleep 60
+           			ansible-playbook --private-key=$ANSIBLE_PK -i aws_ec2.yaml prod.yml
+					'''
+	       		}
+     		}
+   		}
+		stage('Update ProdServer, install and run Docker by Ansible') {
+			when {
+       	    	expression { 
+       		 		return params.CHOICE == 'build'
+				}
+        	}	
+    		steps {
+        		withCredentials([[
+         		$class:            'AmazonWebServicesCredentialsBinding', 
+	     		credentialsId:     'AWS_EC2_Inventory', 
     	  		accessKeyVariable: 'AWS_ACCESS_KEY_ID', 
       			secretKeyVariable: 'AWS_SECRET_ACCESS_KEY']]) {
 	        		sh '''
@@ -44,7 +65,7 @@ pipeline {
 //				}
         		withCredentials([[
           		$class:            'AmazonWebServicesCredentialsBinding', 
-          		credentialsId:     'AWS_EC2_Inventory', 
+          		credentialsId:     'AWS_Terraform', 
           		accessKeyVariable: 'AWS_ACCESS_KEY_ID', 
           		secretKeyVariable: 'AWS_SECRET_ACCESS_KEY']]) {
             		sh '''
