--- a/Jenkinsfile.1
+++ b/Jenkinsfile.1
@@ -25,7 +25,7 @@ pipeline {
             		terraform init
            			terraform apply --auto-approve
            			sleep 60
-           			ansible-playbook --private-key=$ANSIBLE_PK -i aws_ec2.yaml prod.yml
+//           			ansible-playbook --private-key=$ANSIBLE_PK -i aws_ec2.yaml prod.yml
 					'''
 	       		}
      		}
@@ -43,9 +43,9 @@ pipeline {
     	  		accessKeyVariable: 'AWS_ACCESS_KEY_ID', 
       			secretKeyVariable: 'AWS_SECRET_ACCESS_KEY']]) {
 	        		sh '''
-            		terraform init
-           			terraform apply --auto-approve
-           			sleep 60
+//            		terraform init
+//           			terraform apply --auto-approve
+//           			sleep 60
            			ansible-playbook --private-key=$ANSIBLE_PK -i aws_ec2.yaml prod.yml
 					'''
 	       		}
