--- a/Jenkinsfile.1
+++ b/Jenkinsfile.1
@@ -33,6 +33,11 @@ pipeline {
 		}
 // 		Ansible playbook with dynamic inventory
 		stage('Update ProdServer, install and run Docker by Ansible') {
+			when {
+       	    	expression { 
+       		 		return params.CHOICE == 'build'
+				}
+        	}
     		steps {
         		withCredentials([[
          		$class:            'AmazonWebServicesCredentialsBinding', 
