--- a/Jenkinsfile.1
+++ b/Jenkinsfile.1
@@ -74,7 +74,7 @@ pipeline {
     	stage('AWS Env Test by Terraform') {
 			when {
                	expression { 
-           			return params.CHOICE == 'validate' || return params.CHOICE == 'plan'
+           			return params.CHOICE == 'validate' || params.CHOICE == 'plan'
                	}
 			}
       		steps {
