--- a/Jenkinsfile.1
+++ b/Jenkinsfile.1
@@ -24,7 +24,7 @@ pipeline {
     	  		accessKeyVariable: 'AWS_ACCESS_KEY_ID', 
       			secretKeyVariable: 'AWS_SECRET_ACCESS_KEY']]) {
 	        		sh '''
-            		terraform init
+            		terraform init -no-color
            			terraform apply --auto-approve -no-color
            			sleep 60
 					'''
@@ -64,7 +64,7 @@ pipeline {
           		accessKeyVariable: 'AWS_ACCESS_KEY_ID', 
           		secretKeyVariable: 'AWS_SECRET_ACCESS_KEY']]) {
             		sh '''
-            		terraform init
+            		terraform init -no-color
             		terraform ${CHOICE} --auto-approve -no-color
             		'''          
         		}
@@ -84,7 +84,7 @@ pipeline {
           		accessKeyVariable: 'AWS_ACCESS_KEY_ID', 
           		secretKeyVariable: 'AWS_SECRET_ACCESS_KEY']]) {
             		sh '''
-            		terraform init
+            		terraform init -no-color
             		terraform ${CHOICE} -no-color
             		'''          
         		}
