--- a/Jenkinsfile.1
+++ b/Jenkinsfile.1
@@ -26,30 +26,11 @@ pipeline {
 	        		sh '''
 	            		terraform init -no-color
            			terraform apply --auto-approve -no-color
+           			echo ""
 				'''
 	       		}
      		}
 		}
-// 		Ansible playbook with dynamic inventory
-/*		stage('Update ProdServer, install and run Docker by Ansible') {
-			when {
-       	    	expression { 
-       		 		return params.CHOICE == 'build'
-				}
-        	}
-    		steps {
-        		withCredentials([[
-         		$class:            'AmazonWebServicesCredentialsBinding', 
-	     		credentialsId:     'AWS_EC2_Inventory', 
-    	  		accessKeyVariable: 'AWS_ACCESS_KEY_ID', 
-      			secretKeyVariable: 'AWS_SECRET_ACCESS_KEY']]) {
-	        		sh '''
-           			ansible-playbook --private-key=$ANSIBLE_PK -i aws_ec2.yaml prod.yml
-				'''
-	       		}
-     		}
-		}
-*/
 //		Terraform destroy		
 		stage('AWS Env destroy by Terraform') {
 			when {
@@ -87,6 +68,7 @@ pipeline {
             		terraform init -no-color
             		terraform ${CHOICE} -no-color
             		'''          
+			LB = sh(returnStdout: true, script: "terraform output web_loadbalancer_url").trim()
         		}
 			}
 		}	
