--- a/Jenkinsfile.1
+++ b/Jenkinsfile.1
@@ -26,7 +26,7 @@ pipeline {
 	        		sh '''
 	            		terraform init -no-color
            			terraform apply --auto-approve -no-color
-           			echo ""
+           			echo "${TF_LB}"
 				'''
 	       		}
      		}
