--- a/Jenkinsfile.1
+++ b/Jenkinsfile.1
@@ -26,6 +26,7 @@ pipeline {
 	        		sh '''
 	            		terraform init -no-color
            			terraform apply --auto-approve -no-color
+				sleep 90
 				LB=$(cat lb.txt)
 				curl -i $LB > curl.txt
 				grep 'HTTP' curl.txt | awk '{print $2}'
