--- a/Jenkinsfile.1
+++ b/Jenkinsfile.1
@@ -27,11 +27,11 @@ pipeline {
 	            		terraform init -no-color
            			terraform apply --auto-approve -no-color
 				'''
-/*				sleep 90
+				sleep 60
 				LB=$(cat lb.txt)
 				curl -i $LB > curl.txt
 				grep 'HTTP' curl.txt | awk '{print $2}'
-*/				
+				
 				
 	       		}
      		}
