--- a/Jenkinsfile.1
+++ b/Jenkinsfile.1
@@ -28,8 +28,8 @@ pipeline {
            			terraform apply --auto-approve -no-color
 					sleep 60
 					LB=$(cat lb.txt)
-					curl -i $LB > curl.txt
-					grep 'HTTP' curl.txt | awk '{print $2}'
+					curl -i $LB | grep 'HTTP' | awk '{print $2}'
+					rm lb.txt
 					'''
 				}
      		}
