--- a/Jenkinsfile.1
+++ b/Jenkinsfile.1
@@ -27,11 +27,22 @@ pipeline {
 					cd TF
 	            	terraform init -no-color
            			terraform apply --auto-approve -no-color
+					'''
+
+/*
 					sleep 60
 					LB=$(cat lb.txt)
 					curl -i $LB | grep 'HTTP' | awk '{print $2}'
 					rm lb.txt
-					'''
+*/
+					script {
+						def LB = readFile(text: TF/lb.txt).trim()
+          				def response = httpRequest "${LB}"
+          				while (response.status != 200) {
+            				sleep 10 // wait for 10 seconds before trying again
+            				response = httpRequest "${LB}"
+          				}
+        			}	
 				}
      		}
 		}
