--- a/Jenkinsfile.1
+++ b/Jenkinsfile.1
@@ -36,7 +36,7 @@ pipeline {
 					rm lb.txt
 */
 					script {
-						def LB = readFile(text: 'TF/lb.txt').trim()
+						def LB = readFile(file: 'TF/lb.txt')
           				def response = httpRequest "${LB}"
           				while (response.status != 200) {
             				sleep 10 // wait for 10 seconds before trying again
