--- a/Jenkinsfile.1
+++ b/Jenkinsfile.1
@@ -37,10 +37,10 @@ pipeline {
 */
 					script {
 						def LB = readFile(file: 'TF/lb.txt')
-          				def response = httpRequest "http://${LB}"
+          				def response = httpRequest 'http://${LB}'
           				while (response.status != 200) {
             				sleep 10 // wait for 10 seconds before trying again
-            				response = httpRequest "http://${LB}"
+            				response = httpRequest 'http://${LB}'
           				}
         			}	
 				}
