--- a/Jenkinsfile.1
+++ b/Jenkinsfile.1
@@ -28,7 +28,6 @@ pipeline {
 	            	terraform init -no-color
            			terraform apply --auto-approve -no-color
 					'''
-
 /*
 					sleep 60
 					LB=$(cat lb.txt)
@@ -40,7 +39,7 @@ pipeline {
           				def response = httpRequest url: "http://${LB}",  validResponseCodes: '200:599'
           				while (response.status != 200) {
             				sleep 10 // wait for 10 seconds before trying again
-            				response = httpRequest "http://${LB}"
+            				response = httpRequest url: "http://${LB}",  validResponseCodes: '200:599'
           				}
         			}	
 				}
