--- a/Jenkinsfile.1
+++ b/Jenkinsfile.1
@@ -7,7 +7,15 @@ pipeline {
   	}
 	environment {
     		ANSIBLE_PK = credentials('AWS-ProdServer-private-key')
+			URL_WEBHOOK = "https://xclouduae.webhook.office.com/webhookb2/bf73b366-7e43-452c-beee-46ccad2ec03b@1fbd1973-996d-42dd-a3a4-0c8cd76c556e/IncomingWebhook/793d2062b4bc47108d0adaae55b94266/91a922c9-a9d8-43e7-9520-4880a959490b"
 	}
+
+	options {
+        office365ConnectorWebhooks([
+            [name: "Office 365", url: "${URL_WEBHOOK}", notifyBackToNormal: true, notifyFailure: true, notifyRepeatedFailure: true, notifySuccess: true, notifyAborted: true]
+        ])
+    }
+
   	stages {
 // 		Terraform apply
 		stage('AWS Env Provisioning by Terraform') {
