--- a/Jenkinsfile.1
+++ b/Jenkinsfile.1
@@ -12,7 +12,7 @@ pipeline {
 
 	options {
         office365ConnectorWebhooks([
-            [name: "Office 365", url: "${URL_WEBHOOK}",
+            [name: "Office 365", url: env.URL_WEBHOOK,
 //			"https://xclouduae.webhook.office.com/webhookb2/bf73b366-7e43-452c-beee-46ccad2ec03b@1fbd1973-996d-42dd-a3a4-0c8cd76c556e/IncomingWebhook/793d2062b4bc47108d0adaae55b94266/91a922c9-a9d8-43e7-9520-4880a959490b", 
 			notifyBackToNormal: true, notifyFailure: true, 
 			notifyRepeatedFailure: true, notifySuccess: true, notifyAborted: true]
@@ -51,7 +51,7 @@ pipeline {
           				while (response.status != 200) {
             				sleep 10 // wait for 10 seconds before trying again
             				response = httpRequest url: "http://${LB}",  validResponseCodes: '200:599'
-						office365ConnectorSend webhookUrl: "${URL_WEBHOOK}", message: "http://${LB}"
+						office365ConnectorSend webhookUrl: env.URL_WEBHOOK, message: "http://${LB}"
           				}
         			}
 						
