--- a/Jenkinsfile.2
+++ b/Jenkinsfile.2
@@ -95,7 +95,7 @@ pipeline {
           		accessKeyVariable: 'AWS_ACCESS_KEY_ID', 
           		secretKeyVariable: 'AWS_SECRET_ACCESS_KEY']]) {
             		sh '''
-					cd TF4
+					cd TFN
             		terraform init -no-color
             		terraform ${CHOICE} -no-color
             		'''          
