--- a/Jenkinsfile.2
+++ b/Jenkinsfile.2
@@ -32,7 +32,7 @@ pipeline {
     		steps {
         		withCredentials([[
          		$class:            'AmazonWebServicesCredentialsBinding', 
-	     		credentialsId:     'AWS_Terraform', 
+	     		credentialsId:     'AWS_Terraform_new', 
     	  		accessKeyVariable: 'AWS_ACCESS_KEY_ID', 
       			secretKeyVariable: 'AWS_SECRET_ACCESS_KEY']]) {
 	        		sh '''
